@@ -965,7 +965,6 @@ panel_ptr FilePanels::ChangePanel(panel_ptr Current, panel_type NewType, int Cre
 	}
 	else
 	{
-		LastFilePanel.reset();
 		NewPanel=CreatePanel(NewType);
 	}
 
