@@ -1,4 +1,10 @@
-﻿drkns 26.01.2016 02:19:36 +0200 - build 4519
+﻿drkns 26.01.2016 09:43:57 +0200 - build 4520
+
+1. Уточнение 4516.
+
+2. С форума: лишняя перерисовка меню ассоциаций.
+
+drkns 26.01.2016 02:19:36 +0200 - build 4519
 
 1. Уточнение 4516.
 
